--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,59 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>SIMP</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Cryptocurrency Landing Page Template">
-	<meta name="keywords" content="cryptocurrency, unica, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/themify-icons.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
+{% extends "layout.html" %}
+	{% block loader %}
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
-	</div>
-
-	<!-- Header section -->
-	<header class="header-section clearfix">
-		<div class="container-fluid">
-			<a href="index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
-			</a>
-			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
-			<a href="" class="user"><i class="fa fa-user"></i></a>
-			<a href="" class="site-btn">Sign Up Free</a>
-			<nav class="main-menu">
-				<ul class="menu-list">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="">Stocks</a></li>
-					<li><a href="">Privacy Policy</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<!-- Header section end -->
-
-
+	</div>	
+	{% endblock loader %}
+	
+	{% block content %}
 
 	<!-- Page info section -->
 	<section class="page-info-section">
@@ -140,7 +93,7 @@
 	<div class="container">
 		<div class="row spad">
 			<div class="col-md-6 col-lg-3 footer-widget">
-				<img src="img/logo.png" class="mb-4" alt="">
+				<img src="{{url_for('static', filename='img/logo.png')}}" class="mb-4" alt="">
 				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
 				<span>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/sherry-ahmad/" target="_blank">Shehryar Ahmad</a>
@@ -190,15 +143,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="{{url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
+	<script src="{{url_for('static', filename='js/owl.carousel.min.js')}}"></script>
+	<script src="{{url_for('static', filename='js/main.js')}}"></script>
 
 
 
 	<!-- load for map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
-	<script src="js/map.js"></script>
+	<script src="{{url_for('static', filename='js/map.js')}}"></script>
 
-</body>
-</html>
+	{% endblock content %}
