--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -1,56 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>SIMP</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Cryptocurrency Landing Page Template">
-	<meta name="keywords" content="cryptocurrency, unica, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
-	<link href="{{url_for('static',filename='img/favicon.ico')}}" rel="shortcut icon"/>
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}"/>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/font-awesome.min.css')}}"/>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/themify-icons.css')}}"/>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/animate.css')}}"/>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/owl.carousel.css')}}"/>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}"/>
-	
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-	
-	<!-- Header section -->
-	<header class="header-section clearfix">
-		<div class="container-fluid">
-			<a href="index.html" class="site-logo">
-				<img src="{{url_for('static',filename='img/logo.png')}}" alt="">
-			</a>
-			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
-			<a href="" class="user"><i class="fa fa-user"></i></a>
-			<a href="regform/reg.html" class="site-btn">Sign Up Free</a>
-			<nav class="main-menu">
-				<ul class="menu-list">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="stocks.html">Stocks</a></li>
-					<li><a href="">Privacy Policy</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<!-- Header section end -->
-
+{% extends "layout.html" %}
+	{% block content %}
     <!-- Hero section -->
 	<section class="hero-section">
 		<div class="container">
@@ -107,5 +56,4 @@
         });
 
     </script>
-</body>
-</html>
+{% endblock content %}
