--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 		<div class="loader"></div>
 	</div>	
 	{% endblock loader %}
-	
+
 	{% block content %}
 
 	<!-- Page info section -->
@@ -111,10 +111,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
 				<h5 class="widget-title">Quick Links</h5>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Stocks</a></li>
+					<li><a href="/index">Home</a></li>
+					<li><a href="/stocks">Stocks</a></li>
 					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="/contact">Contact Us</a></li>
 					</ul>
 			</div>
 			<div class="col-md-6 col-lg-3 footer-widget pl-lg-5 pl-3">
