--- a/simpApp/templates/contact.html
+++ b/simpApp/templates/contact.html
@@ -86,71 +86,15 @@
 	</section>
 	<!-- Contact section end -->
 
+	{% endblock content %}
+	
+
 
 	
-<!-- Footer section -->
-<footer class="footer-section">
-	<div class="container">
-		<div class="row spad">
-			<div class="col-md-6 col-lg-3 footer-widget">
-				<img src="{{url_for('static', filename='img/logo.png')}}" class="mb-4" alt="">
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
-				<span>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/sherry-ahmad/" target="_blank">Shehryar Ahmad</a>
-</span>
-			</div>
-			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
-				<h5 class="widget-title">Resources</h5>
-				<ul>
-					<li><a href="#">How to Buy Stocks</a></li>
-					<li><a href="#">Stocks Overview</a></li>
-					<li><a href="#">Blog News</a></li>
-					<li><a href="#">How to Sell Stocks</a></li>
-					</ul>
-			</div>
-			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
-				<h5 class="widget-title">Quick Links</h5>
-				<ul>
-					<li><a href="/index">Home</a></li>
-					<li><a href="/stocks">Stocks</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="/contact">Contact Us</a></li>
-					</ul>
-			</div>
-			<div class="col-md-6 col-lg-3 footer-widget pl-lg-5 pl-3">
-				<h5 class="widget-title">Follow Us</h5>
-				<div class="social">
-					<a href="" class="facebook"><i class="fa fa-facebook"></i></a>
-					<a href="" class="google"><i class="fa fa-google-plus"></i></a>
-					<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
-					<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
-				</div>
-			</div>
-		</div>
-		<div class="footer-bottom">
-			<div class="row">
-				<ul class="footer-nav">
-					<li><a href="">Terms of Use</a></li>
-					<li><a href="">Privacy Policy </a></li>
-					<li><a href="">m.shehryarahmad@gmail.com</a></li>
-					<li><a href="">+92 3219892344</a></li>
-				</ul>
-				
-			</div>
-		</div>
-	</div>
-</footer>
 
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="{{url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
-	<script src="{{url_for('static', filename='js/owl.carousel.min.js')}}"></script>
-	<script src="{{url_for('static', filename='js/main.js')}}"></script>
-
-
-
+	{% block scripts %}
 	<!-- load for map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
 	<script src="{{url_for('static', filename='js/map.js')}}"></script>
 
-	{% endblock content %}
+	{% endblock scripts %}
