--- a/simpApp/templates/stocks.html
+++ b/simpApp/templates/stocks.html
@@ -17,34 +17,48 @@
         <section class="diptable counts scrollsnap">
             <div data-aos="fade-right" data-aos-delay="20">
                 <div class="" style="padding:10rem;">
-                    <div class="container">
-                        <div class="data-table-container diptable">
-                            <table id="dip-body" class="display table table-striped" style="width:100%; font-size: 1.5rem;">
-                                <thead class="thead-light">
-                                    <tr style="font-weight: bold;">
-                                        <th></th>
-                                        <th scope="col">Company Name</th>
-                                        <th scope="col">Change</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-								<tbody>
-                                        {% for row in data %}
-                                        <tr onclick="window.location ='#'">
-                                            <td>{{ 0 }}</td>
-                                            <td>{{ row[0] }}</td>
-                                            {% if row[1]>=0 %}
-                                            <td style="color: green;">{{ row[1] }}</td>
-                                            {%else%}
-                                            <td style="color: red;">{{ row[1] }}</td>
-                                            {%endif%}
+                    {%if data.length != 0 %}
+                        <div class="container">
+                            <div class="data-table-container diptable">
+                                <table id="dip-body" class="display table table-striped" style="width:100%; font-size: 1.5rem;">
+                                    <thead class="thead-light">
+                                        <tr style="font-weight: bold;">
+                                            <th scope="col"></th>
+                                            <th scope="col">Company Name</th>
+                                            <th scope="col"></th>
+                                            <th scope="col">Change</th>
                                         </tr>
-                                        {% endfor %}
-								</tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                            {% for row in data %}
+                                            <tr onclick="window.location ='/comapany/{{ row[0] }}'">
+                                                <td>{{ 0 }}</td>
+                                                <td>{{ row[0] }}</td>
+                                                {% if row[1]>=0 %}
+                                                <td><img src="{{url_for('static', filename='img/increase.png')}}" alt="" height="40"></td>
+                                                <td style="color: green;">{{ row[1] }}</td>
+                                                {%else%}
+                                                <td><img src="{{url_for('static', filename='img/decrease.png')}}" alt="" height="40"></td>
+                                                <td style="color: red;">{{ row[1] }}</td>
+                                                {%endif%}
+                                            </tr>
+                                            {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                    </div>
+                    {% else %}
+                        <div class="container">
+                            <div>
+                                <h3>Nothing to view here...</h3>
+                            </div>
+                            <div>
+                                <h4>Please come back another time!</h4>
+                            </div>
+                        </div>
+                    {%endif%}
                 </div>
+            </div>
         </section>
         <!-- End Table -->
     </main>
