--- a/simpApp/templates/layout.html
+++ b/simpApp/templates/layout.html
@@ -34,12 +34,12 @@
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
-			<a href="" class="site-btn">Sign Up Free</a>
+			<a href="/signup" class="site-btn">Sign Up Free</a>
 			<nav class="main-menu">
 				<ul class="menu-list">
 					<li><a href="/index">Home</a></li>
 					<li><a href="/stocks">Stocks</a></li>
-					<li><a href="">Privacy Policy</a></li>
+					<li><a href="/stcks">Privacy Policy</a></li>
 					<li><a href="/contact">Contact</a></li>
 				</ul>
 			</nav>
