--- a/simpApp/templates/layout.html
+++ b/simpApp/templates/layout.html
@@ -29,12 +29,16 @@
 	<!-- Header section -->
 	<header class="header-section clearfix">
 		<div class="container-fluid">
-			<a href="index.html" class="site-logo">
+			<a href="/home" class="site-logo">
 				<img src="{{url_for('static',filename='img/logo.png')}}" alt="">
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
-			<a href="/signup" class="site-btn">Sign Up Free</a>
+			{% if user['logged_in'] == True %}
+				<a href="/details" class="site-btn">Your Account</a>
+			{%else%}
+				<a href="/signup" class="site-btn">Sign Up Free</a>
+			{%endif%}
 			<nav class="main-menu">
 				<ul class="menu-list">
 					<li><a href="/index">Home</a></li>
