--- a/simpApp/templates/stcks.html
+++ b/simpApp/templates/stcks.html
@@ -54,33 +54,24 @@
         const data = response.json();
         
     }
-	// Worldwide Sales Chart
-	var ctx1 = $("#worldwide-sales").get(0).getContext("2d");
-	var myChart1 = new Chart(ctx1, {
-		type: "bar",
-		data: {
-			labels: {{labels}},
-			datasets: [{
-					label: "USA",
-					data: {{data}},
-					backgroundColor: "rgba(0, 156, 255, .7)"
-				},
-				{
-					label: "UK",
-					data: [8, 35, 40, 60, 70, 55, 75],
-					backgroundColor: "rgba(0, 156, 255, .5)"
-				},
-				{
-					label: "AU",
-					data: [12, 25, 45, 55, 65, 70, 60],
-					backgroundColor: "rgba(0, 156, 255, .3)"
-				}
-			]
-		},
-		options: {
-			responsive: true
-		}
-	});
+
+	const dates = {{dates | tojson}};
+	const vals = {{vals | tojson}};
+
+	const pred_dates = {{pred_dates|tojson}};
+	const pred_vals = {{pred_vals|tojson}};
+
+	// dates = dates.reverse();
+
+	const null_dates = []
+	for(let i = 0; i < 30; i++){
+		null_dates.push(null);
+	}
+
+	for(let i = 0; i < 5; i++){
+		null_dates.push(pred_vals[i]);
+	}
+	vals.unshift(pred_vals[0]);
 
 
 	// Salse & Revenue Chart
@@ -88,17 +79,17 @@
 	var myChart2 = new Chart(ctx2, {
 		type: "line",
 		data: {
-			labels: ["2016", "2017", "2018", "2019", "2020", "2021", "2022"],
+			labels: dates.reverse().concat(pred_dates),
 			datasets: [{
-					label: "Salse",
-					data: [15, 30, 55, 45, 70, 65, 85],
+					label: "Previous",
+					data: vals.reverse(),
 					backgroundColor: "rgba(0, 156, 255, .5)",
 					fill: true
 				},
 				{
-					label: "Revenue",
-					data: [99, 135, 170, 130, 190, 180, 270],
-					backgroundColor: "rgba(0, 156, 255, .3)",
+					label: "Prediction",
+					data: null_dates,
+					backgroundColor: "rgba(0, 156, 0, 0.5)",
 					fill: true
 				}
 			]
