--- a/simpApp/templates/layout.html
+++ b/simpApp/templates/layout.html
@@ -19,10 +19,10 @@
 		<link rel="stylesheet" href="{{url_for('static', filename='css/animate.css')}}"/>
 		<link rel="stylesheet" href="{{url_for('static', filename='css/owl.carousel.css')}}"/>
 		<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
-			
+
     </head>
 
-<body>        
+<body>
 
 	{% block loader %}{% endblock %}
 
@@ -36,6 +36,7 @@
 			<a href="" class="user"><i class="fa fa-user"></i></a>
 			{% if user['logged_in'] == True %}
 				<a href="/details" class="site-btn">Your Account</a>
+				<a href="/logout" class="site-btn">Logout</a>
 			{%else%}
 				<a href="/signup" class="site-btn">Sign Up Free</a>
 			{%endif%}
@@ -100,7 +101,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<li><a href="">m.shehryarahmad@gmail.com</a></li>
 					<li><a href="">+92 3219892344</a></li>
 				</ul>
-				
+
 			</div>
 		</div>
 	</div>
