--- a/simpApp/templates/stocks.html
+++ b/simpApp/templates/stocks.html
@@ -31,7 +31,7 @@
                                     </thead>
                                     <tbody>
                                             {% for row in data %}
-                                            <tr onclick="window.location ='/comapany/{{ row[0] }}'">
+                                            <tr onclick="window.location ='/stocks/{{ row[0] }}'">
                                                 <td>{{ 0 }}</td>
                                                 <td>{{ row[0] }}</td>
                                                 {% if row[1]>=0 %}
