--- a/simpApp/templates/reg.html
+++ b/simpApp/templates/reg.html
@@ -35,7 +35,7 @@
 
                 </form>
                 <p class="loginhere">
-                    Already have an account ? <a href="login.html" class="loginhere-link">Login here</a>
+                    Already have an account ? <a href="/login" class="loginhere-link">Login here</a>
                 </p>
             </div>
         </div>
