--- a/simpApp/templates/login.html
+++ b/simpApp/templates/login.html
@@ -3,11 +3,11 @@
     {%block content%}
     <!-- Hero section -->
 	<section class="hero-section">
-		<div class="container">
+		<div class="container-login">
 			<div class="row">
 				<div class="col-md-6">
                     <div class="signup-content">
-                        <form method="POST" id="signup-form" class="signup-form" action="/login">
+                        <form method="POST" id="signup-form" class="signup-form my-form-class" action="/login">
                             <h2 class="form-title">Enter Credentials</h2>
                             <div class="form-group">
                                 <input type="email" class="form-input" name="email" id="email" placeholder="Your Email"/>
@@ -24,7 +24,7 @@
                             {%endif%}
                             </form>
                         <p class="loginhere">
-                            Don't have an account ? <a href="/register" class="loginhere-link">Sign Up here</a>
+                            Don't have an account ? <a href="/signup" class="loginhere-link">Sign Up here</a>
                         </p>
                     </div>
 				</div>
