--- a/simpApp/templates/forms.html
+++ b/simpApp/templates/forms.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Log In</title>
+    <head>
+		<title>SIMP</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Cryptocurrency Landing Page Template">
+		<meta name="keywords" content="cryptocurrency, unica, creative, html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Favicon -->
+		<link href="img/favicon.ico" rel="shortcut icon"/>
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/themify-icons.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/animate.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/owl.carousel.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
 
-    <!-- Favicon -->
-	<link href="{{url_for('static', filename='regform/img/favicon.ico')}}" rel="shortcut icon"/>
+   		 <!-- Font Icon -->
+    	<link rel="stylesheet" href="{{url_for('static', filename='regform/fonts/material-icon/css/material-design-iconic-font.min.css')}}">
 
-    <!-- Font Icon -->
-    <link rel="stylesheet" href="{{url_for('static', filename='regform/fonts/material-icon/css/material-design-iconic-font.min.css')}}">
-
-    <!-- Main css -->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='regform/css/style.css')}}">
+    	<!-- Main css -->
+    	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    	<link rel="stylesheet" href="{{url_for('static', filename='regform/css/style.css')}}">
 </head>
 <body>
 
@@ -31,7 +42,7 @@
 				<ul class="menu-list">
 					<li><a href="/index">Home</a></li>
 					<li><a href="/stocks">Stocks</a></li>
-					<li><a href="">Privacy Policy</a></li>
+					<li><a href="/stcks">Privacy Policy</a></li>
 					<li><a href="/contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -40,59 +51,6 @@
 	<!-- Header section end -->
 
     {% block content %}{% endblock %}
-
-<!-- Footer section -->
-<footer class="footer-section">
-	<div class="container">
-		<div class="row spad">
-			<div class="col-md-6 col-lg-3 footer-widget">
-				<img src="{{url_for('static', filename='img/logo.png')}}" class="mb-4" alt="">
-				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
-				<span>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/sherry-ahmad/" target="_blank">Shehryar Ahmad</a>
-</span>
-			</div>
-			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
-				<h5 class="widget-title">Resources</h5>
-				<ul>
-					<li><a href="#">How to Buy Stocks</a></li>
-					<li><a href="#">Stocks Overview</a></li>
-					<li><a href="#">Blog News</a></li>
-					<li><a href="#">How to Sell Stocks</a></li>
-					</ul>
-			</div>
-			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
-				<h5 class="widget-title">Quick Links</h5>
-				<ul>
-					<li><a href="/index">Home</a></li>
-					<li><a href="/stocks">Stocks</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="/contact">Contact Us</a></li>
-					</ul>
-			</div>
-			<div class="col-md-6 col-lg-3 footer-widget pl-lg-5 pl-3">
-				<h5 class="widget-title">Follow Us</h5>
-				<div class="social">
-					<a href="" class="facebook"><i class="fa fa-facebook"></i></a>
-					<a href="" class="google"><i class="fa fa-google-plus"></i></a>
-					<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
-					<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
-				</div>
-			</div>
-		</div>
-		<div class="footer-bottom">
-			<div class="row">
-				<ul class="footer-nav">
-					<li><a href="">Terms of Use</a></li>
-					<li><a href="">Privacy Policy </a></li>
-					<li><a href="">m.shehryarahmad@gmail.com</a></li>
-					<li><a href="">+92 3219892344</a></li>
-				</ul>
-				
-			</div>
-		</div>
-	</div>
-</footer>
 
 
 
