--- a/simpApp/templates/layout.html
+++ b/simpApp/templates/layout.html
@@ -62,8 +62,7 @@
 				<img src="{{url_for('static', filename='img/logo.png')}}" class="mb-4" alt="">
 				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
 				<span>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/sherry-ahmad/" target="_blank">Shehryar Ahmad</a>
-</span>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </span>
 			</div>
 			<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
 				<h5 class="widget-title">Resources</h5>
