--- a/simpApp/templates/layout.html
+++ b/simpApp/templates/layout.html
@@ -44,7 +44,7 @@
 				<ul class="menu-list">
 					<li><a href="/index">Home</a></li>
 					<li><a href="/stocks">Stocks</a></li>
-					<li><a href="/stcks">Privacy Policy</a></li>
+					<li><a href="">Privacy Policy</a></li>
 					<li><a href="/contact">Contact</a></li>
 				</ul>
 			</nav>
