--- a/simpApp/static/css/profile-style.css
+++ b/simpApp/static/css/profile-style.css
@@ -4,12 +4,24 @@ body {
 	font-family: "Roboto", sans-serif;
 }
 
+.hero-section-profile {
+	height: 900px;
+	padding-top: 160px;
+	display: block;
+	background-image: url("../img/hero-bg.png");
+	background-size: cover;
+	background-color: #f3f7f9;
+	background-position: right top;
+	background-repeat: no-repeat;
+	position: relative;
+	overflow: hidden;
+}
 .shadow {
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
 }
 
 .profile-tab-nav {
-	min-width: 250px;
+	width: 250px;
 }
 
 .tab-content {
