--- a/simpApp/templates/profile.html
+++ b/simpApp/templates/profile.html
@@ -1,187 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Account Settings UI Design</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/profile-style.css')}}">
+		<title>Account Settings</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Cryptocurrency Landing Page Template">
+		<meta name="keywords" content="cryptocurrency, unica, creative, html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Favicon -->
+		<link href="img/favicon.ico" rel="shortcut icon"/>
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/themify-icons.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/animate.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/owl.carousel.css')}}"/>
+		<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
+
+		<meta charset="UTF-8">
+		<title>Account Settings</title>
+		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/profile-style.css')}}">
 </head>
-<body>
-	<section class="py-5 my-5">
-		<div class="container">
-			<h1 class="mb-5">Account Settings</h1>
-			<div class="bg-white shadow rounded-lg d-block d-sm-flex">
-				<div class="profile-tab-nav border-right">
-					<div class="p-4">
-						<div class="img-circle text-center mb-3">
-							<img src="{{url_for('static',filename='img/user2.jpg')}}" alt="Image" class="shadow">
-						</div>
-						<h4 class="text-center">Name</h4>
+<section class="hero-section-profile">
+	<div class="container">
+		<h1 class="mb-5">Account Settings</h1>
+		<div class="bg-white shadow rounded-lg d-block d-sm-flex">
+			<div class="profile-tab-nav border-right">
+				<div class="p-4">
+					<div class="img-circle text-center mb-3">
+						<img src="{{url_for('static',filename='img/user2.jpg')}}" alt="Image" class="shadow">
 					</div>
-					<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-						<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-							<i class="fa fa-home text-center mr-1"></i> 
-							Account
-						</a>
-						<a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
-							<i class="fa fa-key text-center mr-1"></i> 
-							Password
-						</a>
-						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-							<i class="fa fa-user text-center mr-1"></i> 
-							Security
-						</a>
+					<h4 class="text-center">Name</h4>
+				</div>
+				<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+					<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
+						<i class="fa fa-home text-center mr-1"></i> 
+						Account
+					</a>
+					<a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
+						<i class="fa fa-key text-center mr-1"></i> 
+						Password
+					</a>
+					<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
+						<i class="fa fa-user text-center mr-1"></i> 
+						Security
+					</a>
+					
+					<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
+						<i class="fa fa-bell text-center mr-1"></i> 
+						Notification
+					</a>
+				</div>
+			</div>
+			<div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
+				<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
+					<h3 class="mb-4">Account Settings</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>First Name</label>
+								  <input type="text" class="form-control" value="Shehryar">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Last Name</label>
+								  <input type="text" class="form-control" value="Ahmad">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Email</label>
+								  <input type="text" class="form-control" value="example@gmail.com">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Phone number</label>
+								  <input type="text" class="form-control" value="00000000000000">
+							</div>
+						</div>
 						
-						<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
-							<i class="fa fa-bell text-center mr-1"></i> 
-							Notification
-						</a>
+						<div class="col-md-12">
+							<div class="form-group">
+								  <label>Bio</label>
+								<textarea class="form-control" rows="4"></textarea>
+							</div>
+						</div>
+					</div>
+					<div>
+						<button class="btn btn-primary">Update</button>
+						<button class="btn btn-light">Cancel</button>
 					</div>
 				</div>
-				<div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
-					<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
-						<h3 class="mb-4">Account Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>First Name</label>
-								  	<input type="text" class="form-control" value="Shehryar">
-								</div>
+				<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+					<h3 class="mb-4">Password Settings</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Old password</label>
+								  <input type="password" class="form-control">
 							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Last Name</label>
-								  	<input type="text" class="form-control" value="Ahmad">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Email</label>
-								  	<input type="text" class="form-control" value="example@gmail.com">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Phone number</label>
-								  	<input type="text" class="form-control" value="00000000000000">
-								</div>
-							</div>
-							
-							<div class="col-md-12">
-								<div class="form-group">
-								  	<label>Bio</label>
-									<textarea class="form-control" rows="4"></textarea>
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
 						</div>
 					</div>
-					<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-						<h3 class="mb-4">Password Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Old password</label>
-								  	<input type="password" class="form-control">
-								</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>New password</label>
+								  <input type="password" class="form-control">
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>New password</label>
-								  	<input type="password" class="form-control">
-								</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Confirm new password</label>
+								  <input type="password" class="form-control">
 							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Confirm new password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
 						</div>
 					</div>
-					<div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
-						<h3 class="mb-4">Security Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Login</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Two-factor auth</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" value="" id="recovery">
-										<label class="form-check-label" for="recovery">
-										Recovery
-										</label>
-									</div>
-								</div>
+					<div>
+						<button class="btn btn-primary">Update</button>
+						<button class="btn btn-light">Cancel</button>
+					</div>
+				</div>
+				<div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
+					<h3 class="mb-4">Security Settings</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Login</label>
+								  <input type="text" class="form-control">
 							</div>
 						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
+						<div class="col-md-6">
+							<div class="form-group">
+								  <label>Two-factor auth</label>
+								  <input type="text" class="form-control">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" value="" id="recovery">
+									<label class="form-check-label" for="recovery">
+									Recovery
+									</label>
+								</div>
+							</div>
 						</div>
 					</div>
+					<div>
+						<button class="btn btn-primary">Update</button>
+						<button class="btn btn-light">Cancel</button>
+					</div>
+				</div>
+				
 					
-						
-					<div class="tab-pane fade" id="notification" role="tabpanel" aria-labelledby="notification-tab">
-						<h3 class="mb-4">Notification Settings</h3>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification1">
-								<label class="form-check-label" for="notification1">
-									Allows users to receive email notifications for important updates, such as new messages or account activity.
-								</label>
-							</div>
+				<div class="tab-pane fade" id="notification" role="tabpanel" aria-labelledby="notification-tab">
+					<h3 class="mb-4">Notification Settings</h3>
+					<div class="form-group">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="notification1">
+							<label class="form-check-label" for="notification1">
+								Allows users to receive email notifications for important updates, such as new messages or account activity.
+							</label>
 						</div>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification2" >
-								<label class="form-check-label" for="notification2">
-									Allows users to receive notifications about new posts or updates from groups or communities they are a part of.
-								</label>
-							</div>
+					</div>
+					<div class="form-group">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="notification2" >
+							<label class="form-check-label" for="notification2">
+								Allows users to receive notifications about new posts or updates from groups or communities they are a part of.
+							</label>
 						</div>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification3" >
-								<label class="form-check-label" for="notification3">
-									Allows users to receive notifications about upcoming events or webinars related to the product or service.
-								</label>
-							</div>
+					</div>
+					<div class="form-group">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" value="" id="notification3" >
+							<label class="form-check-label" for="notification3">
+								Allows users to receive notifications about upcoming events or webinars related to the product or service.
+							</label>
 						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
-						</div>
+					</div>
+					<div>
+						<button class="btn btn-primary">Update</button>
+						<button class="btn btn-light">Cancel</button>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
+
+
+
+<!-- Header section -->
+<header class="header-section clearfix">
+	<div class="container-fluid">
+		<a href="/home" class="site-logo">
+			<img src="{{url_for('static',filename='img/logo.png')}}" alt="">
+		</a>
+		<div class="responsive-bar"><i class="fa fa-bars"></i></div>
+		<a href="" class="user"><i class="fa fa-user"></i></a>
+		{% if session['uid'] %}
+			<a href="/details" class="site-btn">Your Account</a>
+			<a href="/logout" class="site-btn">Logout</a>
+		{%else%}
+			<a href="/signup" class="site-btn">Sign Up Free</a>
+		{%endif%}
+		<nav class="main-menu">
+			<ul class="menu-list">
+				<li><a href="/index">Home</a></li>
+				<li><a href="/stocks">Stocks</a></li>
+				<li><a href="/details">Privacy Policy</a></li>
+				<li><a href="/contact">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+<!-- Header section end -->
+
+	
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
+
 </html>
