--- a/simpApp/templates/profile.html
+++ b/simpApp/templates/profile.html
@@ -10,7 +10,7 @@
 						<div class="img-circle text-center mb-3">
 							<img src="{{url_for('static',filename='img/default-user.jpg')}}" alt="Image" class="shadow">
 						</div>
-						<h4 class="text-center">Name</h4>
+						<h4 class="text-center">{{user['first_name']}} {{user['last_name']}}</h4>
 					</div>
 					<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 						<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
