--- a/simpApp/static/css/style.css
+++ b/simpApp/static/css/style.css
@@ -1428,3 +1428,80 @@ ol {
 		padding-left: 0;
 	}
 }
+
+.Btn {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	width: 45px;
+	height: 45px;
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+	transition-duration: .3s;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+	background: linear-gradient(-45deg, #3a55f6, #6bf8cd);
+	background-size: 1000% 1000%;
+	animation: gradient 20s ease infinite;
+  }
+  
+  /* Button's gradient animation */
+  @keyframes gradient {
+	0% {
+	  background-position: 0 50%;
+	}
+  
+	50% {
+	  background-position: 100% 50%;
+	}
+  
+	100% {
+	  background-position: 0 50%;
+	}
+  }
+  
+  /* plus sign */
+  .sign{
+	width: 100%;
+	font-size: 2em;
+	color: white;
+	transition-duration: .3s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  /* text */
+  .text{
+	position: absolute;
+	right: 0%;
+	width: 0%;
+	opacity: 0;
+	color: white;
+	 font-size: 1.2em;
+	font-weight: 500;
+	transition-duration: .3s;
+  }
+  /* hover effect on button width */
+  .Btn:hover{
+	width: 125px;
+	border-radius: 10px;
+	transition-duration: .3s;
+  }
+  .Btn:hover .sign{
+	width: 30%;
+	transition-duration: .3s;
+	padding-left: 20px;
+  }
+  /* hover effect button's text */
+  .Btn:hover .text {
+	opacity: 1;
+	width: 70%;
+	transition-duration: .3s;
+	padding-right: 20px;
+  }
+  /* button click effect*/
+  .Btn:active {
+	transform: translate(2px ,2px);
+  }
